--- a/src/styles/DefaultHome.css
+++ b/src/styles/DefaultHome.css
@@ -1,9 +1,5 @@
-/* .trending {
-    margin: 1rem;
-} */
-
 @media screen and (max-width:1000px) {
-    .trending {
+    .Home-news {
         display: none;
     }
 }
