--- a/src/styles/LatestNews.css
+++ b/src/styles/LatestNews.css
@@ -1,6 +1,6 @@
 .LatestNews {
     margin-top: 2rem;
-    background-color: var(--twitter--search);
+    background-color: var(--twitter--background);
     margin-left: 2rem;
     margin-right: 1rem;
     margin-bottom: 3rem;
