--- a/src/styles/Tweet.css
+++ b/src/styles/Tweet.css
@@ -88,7 +88,7 @@ textarea::-webkit-scrollbar {
     }
 
     .defult_pic {
-        display: none;
+        margin-right: 1rem;
     }
 
 
@@ -125,7 +125,7 @@ textarea::-webkit-scrollbar {
     }
 
     .defult_pic {
-        display: none;
+        margin-right: 1rem;
     }
 
 
