--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,16 +1,18 @@
 .search {
     margin-top: 2rem;
-    background-color: var(--twitter--search);
+    width: 80%;
+    background-color: var(--twitter--background);
     margin-left: 2rem;
     margin-right: 1rem;
     margin-bottom: 3rem;
     border-radius: 20px;
     display: flex;
+    justify-content: space-between;
 }
 
 .search form {
     display: flex;
-    justify-content: space-between;
+
     align-items: center;
     width: 100%;
     float: right;
@@ -18,25 +20,20 @@
 }
 
 input[type="text"] {
-    width: 200px;
-    height: 30px;
+    width: 95%;
+    height: 60%;
     padding: 5px;
     border: none;
     border-radius: 5px;
     padding: 5px;
     font-size: 16px;
     border-radius: 20px;
-    background-color: var(--twitter--search);
+    background-color: var(--twitter--background);
 }
 
 input[type="text"]:focus {
     border: none;
     outline: none;
-}
-
-.search-symbol {
-    /* position: absolute; */
-
 }
 
 .search button[type="submit"] {
