--- a/src/styles/Explore/Heading.css
+++ b/src/styles/Explore/Heading.css
@@ -13,8 +13,10 @@
 .Heading .search {
     padding: 0px;
     margin: 0px;
-
+    background-color: white;
 }
+
+
 
 .Explore-options {
     display: flex;
@@ -45,8 +47,8 @@
 }
 
 .display-data {
-    width: 80%;
-    height: 900px;
+    width: 90%;
+    height: 500px;
     overflow-y: auto;
     cursor: pointer;
 }
@@ -86,10 +88,18 @@ body::-webkit-scrollbar-thumb {
         display: none;
     }
 
+    .display-data {
+        margin-right: 0.8rem;
+        height: 400px;
+
+    }
+
     .display-data ul li a {
         text-decoration: none;
-        font-size: 1rem;
+        font-size: 0.7rem;
     }
+
+
 
 }
 
@@ -108,6 +118,11 @@ body::-webkit-scrollbar-thumb {
 
     .mobile {
         display: block;
+    }
+
+    .display-data {
+
+        overflow-x: hidden;
     }
 
     .display-data ul li a {
