--- a/src/styles/Icon.css
+++ b/src/styles/Icon.css
@@ -3,6 +3,7 @@
     align-items: center;
     cursor: pointer;
     margin-right: 2px;
+    padding-right: 3px;
 }
 
 .links {
@@ -23,7 +24,7 @@
 
 .option h2 {
     display: inline;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 400;
 }
 
