--- a/src/styles/HomeFeed/NewFeed.css
+++ b/src/styles/HomeFeed/NewFeed.css
@@ -6,7 +6,7 @@
     .Feeds {
         width: 100%;
         height: 100%;
-        overflow: auto;
+
         overflow-y: hidden;
     }
 
@@ -14,12 +14,13 @@
 
         width: 100%;
         height: 80%;
-        overflow: auto;
+
         overflow-y: scroll;
     }
 
     .bottom-options {
         display: flex;
+        width: 90%;
     }
 }
 
@@ -31,14 +32,15 @@
     }
 
     .Feeds .NewFeed {
-        background-color: aqua;
+
         width: 100%;
         height: 80%;
-        overflow: auto;
+
         overflow-y: scroll;
     }
 
     .bottom-options {
         display: flex;
+        width: 95%;
     }
 }
