--- a/src/styles/HomeFeed/MobileHeading.css
+++ b/src/styles/HomeFeed/MobileHeading.css
@@ -18,6 +18,29 @@
     color: var(--twitter--color);
 }
 
+.slidebar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 999;
+}
+
+.slidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 70%;
+    max-width: 300px;
+    height: 100%;
+    background: white;
+    z-index: 1000;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 @media screen and (min-width:767px) {
     .MobileHeading {
         display: none;
